tests/ui/runtime/gc/check_finalizers.stderr
error: The drop method for `ShouldFail` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:63:13
   |
LL |         self.0.replace(456);
   |         ------
   |         |
   |         a finalizer cannot safely use this `Cell<usize>`
   |         from a drop method because it does not implement `Send` + `Sync`.
...
LL |     Gc::new(ShouldFail(Cell::new(123)));
   |     --------^^^^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<ShouldFail>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values which are thread-safe.

error: The drop method for `ShouldFail2` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:67:13
   |
LL |     Gc::new(self_call);
   |     --------^^^^^^^^^-
   |     |       |
   |     |       contains a function call which may be unsafe.
   |     caused by trying to construct a `Gc<ShouldFail2>` here.

error: The drop method for `ShouldFail3` cannot be safely finalized.
  --> $DIR/check_finalizers.rs:71:13
   |
LL |         println!("Boom {}", self.0.0);
   |                             --------
   |                             |
   |                             a finalizer cannot safely use this `NotThreadSafe`
   |                             from a drop method because it does not implement `Send` + `Sync`.
...
LL |     Gc::new(not_threadsafe);
   |     --------^^^^^^^^^^^^^^- caused by trying to construct a `Gc<ShouldFail3>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values which are thread-safe.

error: aborting due to 3 previous errors

